# pubmed_bot

./: facade.py  publication_formatter.py  pubmed_facade.py  pubmed_scrapper.py  pyproject.toml
